<resources>
    <string name="app_description" translatable="false">Picking Products Made Easy</string>
    <string name="title_route_selection">Routes</string>
    <string name="title_network_configuration">Network Configuration</string>
    <string name="title_data_configuration">Data Configuration</string>
    <string name="title_settings">Settings</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_exit">Exit</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_products_list">Products</string>
    <string name="title_filter_routes">Routes Filter</string>
    <string name="title_filter_products">Products Filter</string>
    <string name="title_ticket_generation">File Ticket</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_filter">Filter</string>
    <string name="menu_title_save">Save</string>
    <string name="route_serviced">Served</string>
    <string name="route_serving">Serving</string>
    <string name="items_picked">Picked</string>
    <string name="total_items">Items</string>
    <string name="route_description">Route Description</string>
    <string name="empty" translatable="false"> </string>
    <string name="button_launch">Launch</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="ticket_button_proof">Attach Proof</string>
    <string name="button_login">Login</string>
    <string name="image_description_theme_background">Theme Background</string>
    <string name="image_description_status_route">Route Status</string>
    <string name="image_description_on_boarding">On Boarding Illustration</string>
    <string name="general">General</string>
    <string name="features">Features</string>
    <string name="application">Application</string>
    <string name="optimisation">Optimisation</string>
    <string name="network_and_data">Network &amp; Data</string>
    <string name="app_theme">App Theme</string>
    <string name="app_language">App Language</string>
    <string name="app_update">App Update</string>
    <string name="app_up_to_date">Your App is up to date</string>
    <string name="app_update_summary">Check for new app updates</string>
    <string name="app_ticket_generation">Generate Ticket</string>
    <string name="app_database">Data Source</string>
    <string name="app_ticket_generation_summary">File a new ticket for bug, crash, feedback or enhancement</string>
    <string name="app_database_summary">Select from which DB the app should communicate with</string>
    <string name="app_voice_commands">Voice Commands</string>
    <string name="app_voice_commands_summary">Enable voice commands, reduces battery life</string>
    <string name="app_data_source_almarai" translatable="false">Almarai</string>
    <string name="app_data_source_cloud" translatable="false">Cloud</string>
    <string name="base_app_theme" translatable="false">base</string>
    <string name="light_app_theme" translatable="false">light</string>
    <string name="dark_app_theme" translatable="false">dark</string>
    <string name="night_app_theme" translatable="false">night</string>
    <string name="english_app_language" translatable="false">english</string>
    <string name="arabic_app_language" translatable="false">arabic</string>
    <string name="bangla_app_language" translatable="false">bangla</string>
    <string name="filipino_app_language" translatable="false">filipino</string>
    <string name="hindi_app_language" translatable="false">hindi</string>
    <string name="indonesian_app_language" translatable="false">indonesian</string>
    <string name="kannada_app_language" translatable="false">kannada</string>
    <string name="malayalam_app_language" translatable="false">malayalam</string>
    <string name="nepali_app_language" translatable="false">nepali</string>
    <string name="pashto_app_language" translatable="false">pashto</string>
    <string name="sinhala_app_language" translatable="false">sinhala</string>
    <string name="tamil_app_language" translatable="false">tamil</string>
    <string name="telugu_app_language" translatable="false">telugu</string>
    <string name="urdu_app_language" translatable="false">urdu</string>
    <string name="vietnamese_app_language" translatable="false">vietnamese</string>
    <string name="loading">Please wait…</string>
    <string name="loading_title">Please wait</string>
    <string name="loading_upload_files">Uploading files and generating a ticket number, please wait…</string>
    <string name="progress_saving_route_details">Please wait, saving route details…</string>
    <string name="progress_fetching_route_status">Please wait, fetching this route\'s updated status…</string>
    <string name="empty_data">Empty data</string>
    <string name="error">Error</string>
    <string name="server_error">Server Error</string>
    <string name="error_could_not_load_navigaton">Could not get the navigation controller, please check me I am sick.</string>
    <string name="nothing_found">Nothing found</string>
    <string name="alert_title_route_not_accessible">Route not accessible</string>
    <string name="alert_message_route_not_accessible">Only the owner who started this route can reopen this route. Please select a different route</string>
    <string name="alert_error_fetching_app_update">Could not fetch app update</string>
    <string name="fetching_routes">Fetching all routes, please wait…</string>
    <string name="fetching_products">Fetching all products</string>
    <string name="no_data_available_routes">We couldn\'t find any routes on this depot, please try again after some time, also please check the depot code or the server IP.</string>
    <string name="no_data_available_products">We couldn\'t find any products on this route, please try again after some time, or check for other routes.</string>
    <string name="no_data_available_statistics">No statistics data available for the selected range, please select a range within the deployment of this app as the least start date and today\'s date, also please check for the device date if its synced.</string>
    <string name="ticket_detail">Elaborated feedback</string>
    <string name="default_number">0</string>
    <string name="server_ip">Server IP</string>
    <string name="made_with">Made with</string>
    <string name="love" translatable="false">  ❤️</string>
    <string name="almarai"> Almarai </string>
    <string name="from"> from </string>
    <string name="server_port">Server Port</string>
    <string name="sales_date">Sales Date</string>
    <string name="date_range">Date Range</string>
    <string name="ticket_bug">Bug</string>
    <string name="ticket_enhancement">Feature</string>
    <string name="ticket_feedback">Feedback</string>
    <string name="ticket_description">Describe your thought</string>
    <string name="ticket_crash">Crash</string>
    <string name="ticket_ui_fix">UI Fix</string>
    <string name="dept_code">Depot Code</string>
    <string name="route_group">Route Group</string>
    <string name="sales_days_variance">+- 2 Days</string>
    <string name="sheets_of_papers_saved">Sheets of paper saved</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="not_same_user">Not the same user ? </string>
    <string name="logout">Logout</string>
    <string name="login">Log In!</string>
    <string name="user_greeting">Hello,</string>
    <string name="no_filter">No Filter</string>
    <string name="sort_in">Sort In</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="with">With</string>
    <string name="route_number">Route Number</string>
    <string name="status_not_served">Status Not Served</string>
    <string name="filter_by">Filter By</string>
    <string name="all">All</string>
    <string name="dairy">Dairy</string>
    <string name="poultry">Poultry</string>
    <string name="bakery">Bakery</string>
    <string name="ipnc" translatable="false">IPNC</string>
    <string name="upc" translatable="false">UPC</string>
    <string name="non_ipnc" translatable="false">Non IPNC</string>
    <string name="customer_only">Customer Only</string>
    <string name="allow_multiple_filters">Allow Multiple Filters</string>
    <string name="persist_filters">Persist Filters</string>
    <string name="hint_search_product">Search Product</string>
    <string name="alert_upload_ticket_title">Ticket Created</string>
    <string name="alert_upload_ticket_message">Your request has been taken, with ticket number\n</string>
    <string name="alert_ticket_upload_failed_title">Ticket Not Created</string>
    <string name="alert_ticket_upload_failed_ticket_message">Some error occurred, your ticket could not be filed</string>
    <string name="alert_ticket_no_description">Please add the ticket description to raise and generate the ticket</string>
    <string name="alert_default_title">Alert</string>
    <string name="alert_default_message">Could not find anything</string>
    <string name="alert_selected_data_null_message">No file is selected</string>
    <string name="alert_button_yes">Yes</string>
    <string name="alert_button_no">NO</string>
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_next">Next</string>
    <string name="alert_button_done">Done</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="alert_button_discard">Discard</string>
    <string name="alert_button_update">Update</string>
    <string name="alert_button_later">Later</string>
    <string name="alert_title_route_served">Route Served</string>
    <string name="alert_title_serve_route">Serve Route</string>
    <string name="alert_title_update_available">Update Available</string>
    <string name="alert_message_route_served">This route has already been served, please select a different route</string>
    <string name="alert_message_route_served_updated">Hurray, you have done an excellent job. The route has been served successfully.</string>
    <string name="alert_message_update_available">A new update for the app is available, please update your app\nUpdate Details\n</string>
    <string name="alert_message_force_update">This is a mandatory update, please update the app\nUpdate Details\n</string>
    <string name="alert_message_route_serve">Are you sure you want to serve this route ?</string>
    <string name="alert_message_maximum_file_count_reached" formatted="false">You have selected %d files, which is more than the maximum number of files allowed, which is %d, remaining files will be omitted</string>
    <string name="alert_message_maximum_file_count">You can select a maximum of %d files</string>
    <string name="alert_confirm_exit">Are you sure you want to exit &amp; discard changes</string>
    <string name="alert_ip_port_empty">Server IP or Server port cannot be empty</string>
    <string name="alert_invalid_ip_format">Invalid IP address format, eg:192.168.1.100 </string>
    <string name="on_boarding_title_custom_filter">Custom Filters</string>
    <string name="on_boarding_title_barcode_scanning">Barcode Scanning</string>
    <string name="on_boarding_title_statistics">Statistics</string>
    <string name="on_boarding_title_save_papers">Green Earth</string>
    <string name="on_boarding_title_voice_search">Voice Search</string>
    <string name="on_boarding_message_custom_filter">Search exactly what you need with custom filters in no time</string>
    <string name="on_boarding_message_barcode_scanning">Baked in barcode scanner to scan any products right away</string>
    <string name="on_boarding_message_statistics">See the statistics of papers saved along the way</string>
</resources>