<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:singleLineTitle="true"
        app:title="@string/general">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/app_theme_entities"
            app:entryValues="@array/app_theme_values"
            app:icon="@drawable/ic_theme"
            app:key="@string/app_theme"
            app:title="@string/app_theme"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="english"
            app:entries="@array/app_language_entities"
            app:entryValues="@array/app_language_values"
            app:icon="@drawable/ic_translate"
            app:key="@string/app_language"
            app:title="@string/app_language"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:singleLineTitle="true"
        app:title="@string/network_and_data">

        <ListPreference
            app:defaultValue="Almarai"
            app:entries="@array/app_db_connection_values"
            app:entryValues="@array/app_db_connection_values"
            app:icon="@drawable/ic_db"
            app:key="@string/app_database"
            app:summary="@string/app_database_summary"
            app:title="@string/app_database"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:singleLineTitle="true"
        app:title="@string/optimisation">

        <Preference
            app:icon="@drawable/ic_bug"
            app:key="@string/app_ticket_generation"
            app:singleLineTitle="true"
            app:summary="@string/app_ticket_generation_summary"
            app:title="@string/app_ticket_generation" />

    </PreferenceCategory>

    <PreferenceCategory
        app:singleLineTitle="true"
        app:title="@string/features">

        <SwitchPreference
            app:icon="@drawable/ic_mic"
            app:key="@string/app_voice_commands"
            app:singleLineTitle="true"
            app:summary="@string/app_voice_commands_summary"
            app:title="@string/app_voice_commands" />

    </PreferenceCategory>

    <PreferenceCategory
        app:singleLineTitle="true"
        app:title="@string/application">

        <Preference
            app:icon="@drawable/ic_system_update"
            app:key="@string/app_update"
            app:summary="@string/app_update_summary"
            app:title="@string/app_update" />

    </PreferenceCategory>

</PreferenceScreen>