<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_item_action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_title_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_product_action_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/menu_title_filter"
        app:showAsAction="always|collapseActionView"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_product_action_save"
        android:icon="@drawable/ic_save"
        android:orderInCategory="3"
        android:title="@string/menu_title_save"
        app:showAsAction="always" />

</menu>